--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <ul class="icon-astr">
                   <li class="icon-anten">
                     <svg class="antena" width="64" height="64">
-                      <use href="./images/icons.svg.svg#icon-antenna-1"></use>
+                      <use href="./images/icons.svg#icon-antenna-1"></use>
                     </svg>
                   </li>
               </div>
@@ -58,37 +58,28 @@
         </p>
         </li>
         <li class="lii">
-          <div class="container-icon">
-            <ul class="icon-astr">
-              <li class="icon-anten">
+          <div class="container-iconn">
                 <svg class="antena" width="64" height="64">
-                  <use href="./images/icons.svg.svg#icon-clock-1"></use>
+                  <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
-              </li>
           </div>
         <h3 class="title">Punctuality</h3>
         <p class="middle">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
         </li>
         <li class="lii">
           <div class="container-icon">
-            <ul class="icon-astr">
-              <li class="icon-anten">
                 <svg class="antena" width="64" height="64">
-                  <use href="./images/icons.svg.svg#icon-diagram-1"></use>
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
-              </li>
           </div>
         <h3 class="title">Diligence</h3>
          <p class="middle">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
         <li class="lii">
           <div class="container-icon">
-            <ul class="icon-astr">
-              <li class="icon-anten">
                 <svg class="antena" width="64" height="64">
-                  <use href="./images/icons.svg.svg#icon-astronaut-1"></use>
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
-              </li>
           </div>
         <h3 class="title">Technologies</h3>
          <p class="middle">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
@@ -104,38 +95,32 @@
           <div class="employee-info">
           <h3 class="titlee">Mark Guerrero</h3> 
           <p class="team-p">Product Designer</p> </div> </li>
-          <div class="container-icon">
             <ul class="icon-list">
               <li class="icon-item">
                 <a href="" class="icon-link">
                   <svg class="antena" width="16" height="16">
-                    <use href="./images/icons.svg.svg#icon-instagram-2"></use>
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
-          </div>
-          <div class="container-icon">
             <li class="icon-item">
               <a href="" class="icon-link">
                 <svg class="antena" width="16" height="16">
-                  <use href="./images/icons.svg.svg#icon-twitter-1"></use>
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
-          </div>
-          <div class="container-icon">
             <li class="icon-item">
               <a href="" class="icon-link">
                 <svg class="antena" width="16" height="16">
-                  <use href="./images/icons.svg.svg#icon-facebook-1"></use>
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
-          </div>
           <li class="icon-item">
             <a href="" class="icon-link">
               <svg class="antena" width="16" height="16">
-                <use href="./images/icons.svg.svg#icon-linkedin-1"></use>
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg>
             </a>
           </li>
@@ -145,127 +130,99 @@
           <div class="employee-info">
           <h3 class="titlee">Tom Ford</h3> 
           <p class="team-p">Frontend Developer</p> </div> </li>
-          <div class="container-icon">
             <ul class="icon-list">
               <li class="icon-item">
                 <a href="" class="icon-link">
                   <svg class="antena" width="16" height="16">
-                    <use href="./images/icons.svg.svg#icon-instagram-2"></use>
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
-          </div>
-          <div class="container-icon">
             <li class="icon-item">
               <a href="" class="icon-link">
                 <svg class="antena" width="16" height="16">
-                  <use href="./images/icons.svg.svg#icon-twitter-1"></use>
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
-          </div>
-          <div class="container-icon">
             <li class="icon-item">
               <a href="" class="icon-link">
                 <svg class="antena" width="16" height="16">
-                  <use href="./images/icons.svg.svg#icon-facebook-1"></use>
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
-          </div>
           <li class="icon-item">
             <a href="" class="icon-link">
               <svg class="antena" width="16" height="16">
-                <use href="./images/icons.svg.svg#icon-linkedin-1"></use>
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg>
             </a>
           </li>
-          </div>
-          </ul>
           <li class="bak"><img src="./images/img3.jpg" width="264" alt="men 3"> 
           <div class="employee-info">
           <h3 class="titlee">Camila Garcia</h3> 
           <p class="team-p">Marketing</p> </div> </li> 
-          <div class="container-icon">
-            <ul class="icon-list">
               <li class="icon-item">
                 <a href="" class="icon-link">
                   <svg class="antena" width="16" height="16">
-                    <use href="./images/icons.svg.svg#icon-instagram-2"></use>
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
-          </div>
-          <div class="container-icon">
             <li class="icon-item">
               <a href="" class="icon-link">
                 <svg class="antena" width="16" height="16">
-                  <use href="./images/icons.svg.svg#icon-twitter-1"></use>
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
-          </div>
-          <div class="container-icon">
             <li class="icon-item">
               <a href="" class="icon-link">
                 <svg class="antena" width="16" height="16">
-                  <use href="./images/icons.svg.svg#icon-facebook-1"></use>
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
-          </div>
           <li class="icon-item">
             <a href="" class="icon-link">
               <svg class="antena" width="16" height="16">
-                <use href="./images/icons.svg.svg#icon-linkedin-1"></use>
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg>
             </a>
           </li>
-          </div>
-          </ul>
           <li class="bak"><img src="./images/img4.jpg" width="264" alt="women">
             <div class="employee-info">
               <h3 class="titlee">Daniel Wilson</h3>
               <p class="team-p">UI Designer</p>
-              <div class="container-icon">
-                <ul class="icon-list">
                   <li class="icon-item">
                     <a href="" class="icon-link">
                       <svg class="antena" width="16" height="16">
-                        <use href="./images/icons.svg.svg#icon-instagram-2"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-              </div>
-              <div class="container-icon">
                 <li class="icon-item">
                   <a href="" class="icon-link">
                     <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-twitter-1"></use>
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
-              </div>
-              <div class="container-icon">
                 <li class="icon-item">
                   <a href="" class="icon-link">
                     <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-facebook-1"></use>
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
-              </div>
               <li class="icon-item">
                 <a href="" class="icon-link">
                   <svg class="antena" width="16" height="16">
-                    <use href="./images/icons.svg.svg#icon-linkedin-1"></use>
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
               </li>
-              </div>
-              </ul>
-            </div>
-          </li>
           </ul>
           </section>
           <section class="portfolio">
@@ -317,37 +274,34 @@
               <li class="icon-item">
                 <a href="" class="icon-link">
                 <svg class="antena" width="24" height="24">
-                  <use href="./images/icons.svg.svg#icon-instagram-2"></use>
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
                 </a>
               </li>
           </div>
           <div class="container-icon">
+            <ul>
               <li class="icon-item">
               <a href="" class="icon-link">
                 <svg class="antena" width="24" height="24">
-                  <use href="./images/icons.svg.svg#icon-twitter-1"></use>
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
                 </a>
               </li>
-          </div>
-          <div class="container-icon">
               <li class="icon-item">
                 <a href="" class="icon-link">
                 <svg class="antena" width="24" height="24">
-                  <use href="./images/icons.svg.svg#icon-facebook-1"></use>
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
                 </a>
               </li>
-          </div>
           <li class="icon-item">
             <a href="" class="icon-link">
               <svg class="antena" width="24" height="24">
-                <use href="./images/icons.svg.svg#icon-linkedin-1"></use>
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg>
               </a>
             </li>
-             </div>
           </ul>
           </div>
       </footer>
