--- a/index.html
+++ b/index.html
@@ -40,80 +40,86 @@
            <button type="button" class="cursor-pointer">Order Service</button>
           </div>
           </section>
-           <section class="second">
-           <div class="container">
-           <h2 class="visually-hidden">Solutions</h2>
-           <ul class="centero">
-            <li class="lii">
-              <div class="container-icon">
-                    <svg class="antena" width="64" height="64">
-                      <use href="./images/icons.svg#icon-antenna-1"></use>
-                    </svg>
-              </div>
-        <h3 class="title">Strategy</h3>
-        <p class="middle">Our goal is to identify the business problem to walk away with the perfect and creative solution.
-        </p>
-        </li>
-        <li class="lii">
-          <div class="container-iconn">
-                <svg class="antena" width="64" height="64">
-                  <use href="./images/icons.svg#icon-clock-1"></use>
-                </svg>
-          </div>
-        <h3 class="title">Punctuality</h3>
-        <p class="middle">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-        </li>
-        <li class="lii">
-          <div class="container-icon">
-                <svg class="antena" width="64" height="64">
-                  <use href="./images/icons.svg#icon-diagram-1"></use>
-                </svg>
-          </div>
-        <h3 class="title">Diligence</h3>
-         <p class="middle">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-        </li>
-        <li class="lii">
-          <div class="container-icon">
-                <svg class="antena" width="64" height="64">
-                  <use href="./images/icons.svg#icon-astronaut-1"></use>
-                </svg>
-          </div>
-        <h3 class="title">Technologies</h3>
-         <p class="middle">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-          </li>
-         </ul>
+              <section class="second">
+                <div class="container">
+                  <h2 class="visually-hidden">Solutions</h2>
+                  <ul class="centero">
+                    <li class="lii">
+                      <div class="container-second">
+                        <svg class="antena" width="64" height="64">
+                          <use href="./images/icons.svg#icon-antenna-1"></use>
+                        </svg>
+                      </div>
+                      <h3 class="title">Strategy</h3>
+                      <p class="middle">Our goal is to identify the business problem to walk away with the perfect and creative
+                        solution.
+                      </p>
+                    </li>
+                    <li class="lii">
+                      <div class="container-second">
+                        <svg class="antena" width="64" height="64">
+                          <use href="./images/icons.svg#icon-clock-1"></use>
+                        </svg>
+                      </div>
+                      <h3 class="title">Punctuality</h3>
+                      <p class="middle">Bring the key message to the brand's audience for the best price within the shortest possible
+                        time.</p>
+                    </li>
+                    <li class="lii">
+                      <div class="container-second">
+                        <svg class="antena" width="64" height="64">
+                          <use href="./images/icons.svg#icon-diagram-1"></use>
+                        </svg>
+                      </div>
+                      <h3 class="title">Diligence</h3>
+                      <p class="middle">Research and confirm brands that present the strongest digital growth opportunities and
+                        minimize risk.</p>
+                    </li>
+                    <li class="lii">
+                      <div class="container-second">
+                        <svg class="antena" width="64" height="64">
+                          <use href="./images/icons.svg#icon-astronaut-1"></use>
+                        </svg>
+                      </div>
+                      <h3 class="title">Technologies</h3>
+                      <p class="middle">Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.</p>
+                    </li>
+                  </ul>
+                </div>
+              </section>
+<section class="team">
+  <div class="container">
+    <h2 class="teamul">Our Team</h2>
+    <ul class="centerr">
+      <li class="bak">
+        <img src="./images/img1.jpg" width="264" alt="men 1">
+        <div class="employee-info">
+          <h3 class="titlee">Mark Guerrero</h3>
+          <p class="team-p">Product Designer</p>
         </div>
-        </section>
-        <section class="team">
-        <div class="container">
-         <h2 class="teamul">Our Team</h2>
-         <ul class="centerr">
-          <li class="bak"><img src="./images/img1.jpg" width="264" alt="men 1"> 
-          <div class="employee-info">
-          <h3 class="titlee">Mark Guerrero</h3> 
-          <p class="team-p">Product Designer</p> </div> </li>
-            <ul class="icon-list">
-              <li class="icon-item">
-                <a href="" class="icon-link">
-                  <svg class="antena" width="16" height="16">
-                    <use href="./images/icons.svg#icon-instagram-2"></use>
-                  </svg>
-                </a>
-              </li>
-            <li class="icon-item">
-              <a href="" class="icon-link">
-                <svg class="antena" width="16" height="16">
-                  <use href="./images/icons.svg#icon-twitter-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="icon-item">
-              <a href="" class="icon-link">
-                <svg class="antena" width="16" height="16">
-                  <use href="./images/icons.svg#icon-facebook-1"></use>
-                </svg>
-              </a>
-            </li>
+        <ul class="icon-list">
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
           <li class="icon-item">
             <a href="" class="icon-link">
               <svg class="antena" width="16" height="16">
@@ -121,36 +127,110 @@
               </svg>
             </a>
           </li>
-          
+        </li>
+        </ul>
+        <li class="bak">
+        <img src="./images/img2.jpg" width="264" alt="men 2">
+        <div class="employee-info">
+          <h3 class="titlee">Tom Ford</h3>
+          <p class="team-p">Frontend Developer</p>
+        </div>
+        <ul class="icon-list">
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </li>
+
+      <li class="bak">
+        <img src="./images/img3.jpg" width="264" alt="men 3">
+        <div class="employee-info">
+          <h3 class="titlee">Camila Garcia</h3>
+          <p class="team-p">Marketing</p>
+        </div>
+        <ul class="icon-list">
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        </li>
+        <li class="bak"><img src="./images/img4.jpg" width="264" alt="women">
+          <div class="employee-info">
+            <h3 class="titlee">Daniel Wilson</h3>
+            <p class="team-p">UI Designer</p>
           </div>
-          </ul>
-          </ul>
-          <li class="bak"><img src="./images/img2.jpg" width="264" alt="men 2"> 
-          <div class="employee-info">
-          <h3 class="titlee">Tom Ford</h3> 
-          <p class="team-p">Frontend Developer</p> </div> </li>
-            <ul class="icon-list">
-              <li class="icon-item">
-                <a href="" class="icon-link">
-                  <svg class="antena" width="16" height="16">
-                    <use href="./images/icons.svg#icon-instagram-2"></use>
-                  </svg>
-                </a>
-              </li>
-            <li class="icon-item">
-              <a href="" class="icon-link">
-                <svg class="antena" width="16" height="16">
-                  <use href="./images/icons.svg#icon-twitter-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="icon-item">
-              <a href="" class="icon-link">
-                <svg class="antena" width="16" height="16">
-                  <use href="./images/icons.svg#icon-facebook-1"></use>
-                </svg>
-              </a>
-            </li>
+        <ul class="icon-list">
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
           <li class="icon-item">
             <a href="" class="icon-link">
               <svg class="antena" width="16" height="16">
@@ -158,72 +238,9 @@
               </svg>
             </a>
           </li>
-          <li class="bak"><img src="./images/img3.jpg" width="264" alt="men 3"> 
-          <div class="employee-info">
-          <h3 class="titlee">Camila Garcia</h3> 
-          <p class="team-p">Marketing</p> </div> </li> 
-              <li class="icon-item">
-                <a href="" class="icon-link">
-                  <svg class="antena" width="16" height="16">
-                    <use href="./images/icons.svg#icon-instagram-2"></use>
-                  </svg>
-                </a>
-              </li>
-            <li class="icon-item">
-              <a href="" class="icon-link">
-                <svg class="antena" width="16" height="16">
-                  <use href="./images/icons.svg#icon-twitter-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="icon-item">
-              <a href="" class="icon-link">
-                <svg class="antena" width="16" height="16">
-                  <use href="./images/icons.svg#icon-facebook-1"></use>
-                </svg>
-              </a>
-            </li>
-          <li class="icon-item">
-            <a href="" class="icon-link">
-              <svg class="antena" width="16" height="16">
-                <use href="./images/icons.svg#icon-linkedin-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="bak"><img src="./images/img4.jpg" width="264" alt="women">
-            <div class="employee-info">
-              <h3 class="titlee">Daniel Wilson</h3>
-              <p class="team-p">UI Designer</p>
-                  <li class="icon-item">
-                    <a href="" class="icon-link">
-                      <svg class="antena" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram-2"></use>
-                      </svg>
-                    </a>
-                  </li>
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
-                  </a>
-                </li>
-              <li class="icon-item">
-                <a href="" class="icon-link">
-                  <svg class="antena" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin-1"></use>
-                  </svg>
-                </a>
-              </li>
-          </ul>
-          </section>
+        </ul>
+        </li>
+        </section>
           <section class="portfolio">
             <div class="container">
         <h2 class="teamul">Our Portfolio</h2>
@@ -279,7 +296,6 @@
               </li>
           </div>
           <div class="container-icon">
-            <ul>
               <li class="icon-item">
               <a href="" class="icon-link">
                 <svg class="antena" width="24" height="24">
