--- a/index.html
+++ b/index.html
@@ -278,15 +278,14 @@
         </div>
         </section>
        </main>
-<footer class="footer">
-  <div class="footer-content">
-    <a class="logo-footer" href="./index.html">Web<span class="logo-partt">Studio</span></a>
-    <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth
-      solutions.</p>
-  </div>
-  <p class="text-footer-soc">Social media</p>
-  <ul class="icon-bottom">
-              <li class="icon-item">
+       <footer class="footer">
+        <div class="container-ищее">
+        <a class="logo-footer" href="./index.html">Web<span class="logo-partt">Studio</span></a>
+        <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
+          <p class="text-footer-soc">Social media</p>
+          <ul class="icon-list">
+              <li class="icon-item-footer">
                 <div class="container-footer">
                 <a href="" class="icon-linkd">
                 <svg class="antena" width="24" height="24">
@@ -295,7 +294,7 @@
                 </a>
               </li>
           </div>
-          <li class="icon-item">
+          <li class="icon-item-footer">
                 <div class="container-footer">
               <a href="" class="icon-linkd">
                 <svg class="antena" width="24" height="24">
@@ -303,7 +302,7 @@
                 </svg>
                 </a>
               </li>
-              <li class="icon-item">
+              <li class="icon-item-footer">
                 <div class="container-icon">
                 <a href="" class="icon-linkd">
                 <svg class="antena" width="24" height="24">
@@ -311,7 +310,7 @@
                 </svg>
                 </a>
               </li>
-          <li class="icon-item">
+          <li class="icon-item-footer">
             <div class="container-footer">
             <a href="" class="icon-linkd">
               <svg class="antena" width="24" height="24">
