--- a/index.html
+++ b/index.html
@@ -249,37 +249,43 @@
       <div class="container">
         <h2 class="teamul">Our Portfolio</h2>
         <ul class="center">
-          <li class="forty"><img src="./images/img5.jpg" width="360" alt="men 1">
+          <li class="forty">
+            <div><img src="./images/img5.jpg" width="360" alt="men 1"></div>
             <div class="app-info">
               <h3 class="name">Banking App</h3>
               <p class="team-pp">App</p>
             </div>
           </li>
-          <li class="forty"><img src="./images/img6.jpg" width="360" alt="men 2">
+          <li class="forty">
+            <div><img src="./images/img6.jpg" width="360" alt="men 2"></div>
             <div class="app-info">
               <h3 class="name">Cashless Payment</h3>
               <p class="team-pp">Marketing</p>
             </div>
           </li>
-          <li class="forty"><img src="./images/img7.jpg" width="360" alt="men 3">
+          <li class="forty">
+            <div><img src="./images/img7.jpg" width="360" alt="men 3"></div>
             <div class="app-info">
               <h3 class="name">Meditation App</h3>
               <p class="team-pp">App</p>
             </div>
           </li>
-          <li class="forty"><img src="./images/img8.jpg" width="360" alt="women">
+          <li class="forty">
+            <div><img src="./images/img8.jpg" width="360" alt="women"></div>
             <div class="app-info">
               <h3 class="name">Taxi Service</h3>
               <p class="team-pp">Marketing</p>
             </div>
           </li>
-          <li class="forty"><img src="./images/img9.jpg" width="360" alt="women">
+          <li class="forty">
+            <div><img src="./images/img9.jpg" width="360" alt="women"></div>
             <div class="app-info">
               <h3 class="name">Screen Illustrations</h3>
               <p class="team-pp">Design</p>
             </div>
           </li>
-          <li class="forty"><img src="./images/img10.jpg" width="360" alt="women">
+          <li class="forty">
+            <div><img src="./images/img10.jpg" width="360" alt="women"></div>
             <div class="app-info">
               <h3 class="name">Online Courses</h3>
               <p class="team-pp">Marketing</p>
