--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
     </section>
     <section class="team">
-      <div class="container">
+      <div class="container-team">
         <h2 class="teamul">Our Team</h2>
       </div>
            <ul class="centerr">
