--- a/index.html
+++ b/index.html
@@ -256,6 +256,11 @@
           </li>
           <li class="forty">
             <div><img src="./images/img6.jpg" width="360" alt="men 2"></div>
+            <div class="sellers-cover-container">
+              <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App · Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
+            </div>
             <div class="app-info">
               <h3 class="name">Cashless Payment</h3>
               <p class="team-pp">Marketing</p>
@@ -270,6 +275,9 @@
           </li>
           <li class="forty">
             <div><img src="./images/img8.jpg" width="360" alt="women"></div>
+            <div> class="seller-cover-conteiner"
+              p
+            </div>
             <div class="app-info">
               <h3 class="name">Taxi Service</h3>
               <p class="team-pp">Marketing</p>
