--- a/index.html
+++ b/index.html
@@ -249,6 +249,11 @@
         <ul class="center">
           <li class="forty">
             <div><img src="./images/img5.jpg" width="360" alt="men 1"></div>
+            <div class="sellers-cover-container">
+              <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App · Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
+            </div>
             <div class="app-info">
               <h3 class="name">Banking App</h3>
               <p class="team-pp">App</p>
@@ -268,6 +273,11 @@
           </li>
           <li class="forty">
             <div><img src="./images/img7.jpg" width="360" alt="men 3"></div>
+            <div class="sellers-cover-container">
+              <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App · Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
+            </div>
             <div class="app-info">
               <h3 class="name">Meditation App</h3>
               <p class="team-pp">App</p>
@@ -275,8 +285,10 @@
           </li>
           <li class="forty">
             <div><img src="./images/img8.jpg" width="360" alt="women"></div>
-            <div> class="seller-cover-conteiner"
-              p
+            <div class="sellers-cover-container">
+              <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App · Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
             </div>
             <div class="app-info">
               <h3 class="name">Taxi Service</h3>
@@ -285,6 +297,11 @@
           </li>
           <li class="forty">
             <div><img src="./images/img9.jpg" width="360" alt="women"></div>
+            <div class="sellers-cover-container">
+              <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App · Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
+            </div>
             <div class="app-info">
               <h3 class="name">Screen Illustrations</h3>
               <p class="team-pp">Design</p>
@@ -292,6 +309,11 @@
           </li>
           <li class="forty">
             <div><img src="./images/img10.jpg" width="360" alt="women"></div>
+            <div class="sellers-cover-container">
+              <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App · Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
+            </div>
             <div class="app-info">
               <h3 class="name">Online Courses</h3>
               <p class="team-pp">Marketing</p>
