--- a/index.html
+++ b/index.html
@@ -248,11 +248,13 @@
         <h2 class="teamul">Our Portfolio</h2>
         <ul class="center">
           <li class="forty">
+            <div class="sellers-cover-wrap">
             <div><img src="./images/img5.jpg" width="360" alt="men 1"></div>
             <div class="sellers-cover-container">
               <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App · Exotic Fruit Ecommerce App ·
                 Cloud Storage App</p>
+                </div>
             </div>
             <div class="app-info">
               <h3 class="name">Banking App</h3>
@@ -260,11 +262,13 @@
             </div>
           </li>
           <li class="forty">
+            <div class="sellers-cover-wrap">
             <div><img src="./images/img6.jpg" width="360" alt="men 2"></div>
             <div class="sellers-cover-container">
               <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App · Exotic Fruit Ecommerce App ·
                 Cloud Storage App</p>
+            </div>
             </div>
             <div class="app-info">
               <h3 class="name">Cashless Payment</h3>
@@ -272,11 +276,13 @@
             </div>
           </li>
           <li class="forty">
+            <div class="sellers-cover-wrap">
             <div><img src="./images/img7.jpg" width="360" alt="men 3"></div>
             <div class="sellers-cover-container">
               <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App · Exotic Fruit Ecommerce App ·
                 Cloud Storage App</p>
+            </div>
             </div>
             <div class="app-info">
               <h3 class="name">Meditation App</h3>
@@ -284,6 +290,7 @@
             </div>
           </li>
           <li class="forty">
+            <div class="sellers-cover-wrap">
             <div><img src="./images/img8.jpg" width="360" alt="women"></div>
             <div class="sellers-cover-container">
               <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
@@ -294,9 +301,11 @@
               <h3 class="name">Taxi Service</h3>
               <p class="team-pp">Marketing</p>
             </div>
+            </div>
           </li>
           <li class="forty">
-            <div><img src="./images/img9.jpg" width="360" alt="women"></div>
+           <div class="sellers-cover-wrap">
+             <div><img src="./images/img9.jpg" width="360" alt="women"></div>
             <div class="sellers-cover-container">
               <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App · Exotic Fruit Ecommerce App ·
@@ -306,13 +315,16 @@
               <h3 class="name">Screen Illustrations</h3>
               <p class="team-pp">Design</p>
             </div>
+            </div>
           </li>
           <li class="forty">
+            <div class="sellers-cover-wrap">
             <div><img src="./images/img10.jpg" width="360" alt="women"></div>
             <div class="sellers-cover-container">
               <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App · Exotic Fruit Ecommerce App ·
                 Cloud Storage App</p>
+            </div>
             </div>
             <div class="app-info">
               <h3 class="name">Online Courses</h3>
